# autopilot-jobs

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  config.example.json  config.json  pyproject.toml  requirements.txt  setup_cron.sh
.github/workflows/: ci.yml
demo/: demo_run.py  run_demo.sh
demo/fixtures/: demo_companies.json  demo_jobs.json  demo_resume.md
job_hunt/: __init__.py  drafter.py  llm_utils.py  log.py  main.py  mcp_server.py  scanner.py  tools.py
tests/: test_config_precedence.py  test_export_smoke.py  test_scan_output.py
